tests/machine/x/scala/group_by_multi_join_sort.error
exit status 1
/workspace/mochi/tests/machine/x/scala/group_by_multi_join_sort.scala:8: error: illegal start of simple expression
  val result = (((for { c <- customer; o <- orders; if (o.o_custkey).asInstanceOf[Int] == (c.c_custkey).asInstanceOf[Int]; l <- lineitem; if (l.l_orderkey).asInstanceOf[Int] == (o.o_orderkey).asInstanceOf[Int]; n <- nation; if (n.n_nationkey).asInstanceOf[Int] == (c.c_nationkey).asInstanceOf[Int]; if (o("o_orderdate")).asInstanceOf[Int] >= start_date && (o("o_orderdate")).asInstanceOf[Int] < end_date && (l("l_returnflag")).asInstanceOf[Int] == "R" } yield (Map("c_custkey" -> (c("c_custkey")), "c_name" -> (c("c_name")), "c_acctbal" -> (c("c_acctbal")), "c_address" -> (c("c_address")), "c_phone" -> (c("c_phone")), "c_comment" -> (c("c_comment")), "n_name" -> (n("n_name"))), (c, o, l, n))).groupBy(_._1).map{ case(k,list) => (k, list.map(_._2)) }.toList).map{ case(gKey,gItems) => { val g = (gKey, gItems); Map("c_custkey" -> (g.key.c_custkey), "c_name" -> (g.key.c_name), "revenue" -> (for { x <- g } yield (x.l.l_extendedprice).asInstanceOf[Int] * ((1 - (x.l.l_discount).asInstanceOf[Int])).asInstanceOf[Int].sum), "c_acctbal" -> (g.key.c_acctbal), "n_name" -> (g.key.n_name), "c_address" -> (g.key.c_address), "c_phone" -> (g.key.c_phone), "c_comment" -> (g.key.c_comment)) } }.toList).sortBy(c => -for { x <- g } yield (x.l.l_extendedprice).asInstanceOf[Int] * ((1 - (x.l.l_discount).asInstanceOf[Int])).asInstanceOf[Int].sum)
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        ^
/workspace/mochi/tests/machine/x/scala/group_by_multi_join_sort.scala:12: error: ')' expected but '}' found.
}
^
two errors found
